--- a/styles/style.css
+++ b/styles/style.css
@@ -276,7 +276,7 @@
 }
 
 .ai-message {
-  max-width: 50%;
+  max-width: fit-content;
   font-family: helvetica;
   color: #333;
   background: #efeff3;
@@ -290,11 +290,15 @@
 
 .actions-btn {
   display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 10px;
   gap: 10px;
   padding: 12px 16px;
 }
 
 .actions-btn button {
+  margin-top: 0;
   background-color: #eeeef5;
   padding: 12px 16px;
   border: none;
@@ -312,18 +316,31 @@
   font-size: 14px;
 }
 
+select {
+  border: 1px solid #b80404;
+  outline: none;
+  gap: 10px;
+  border-radius: 5px;
+}
+
+
+.sub-markdown {
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  align-items: flex-start;
+  gap: 10px;
+  padding: 12px 16px;
+  background: #f1f4f6;
+}
 .sub-markdown select {
   background: white;
   border: none;
   color: #333;
   background: #efeff3;
-  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.01);
   border-radius: 6px;
   padding: 10px 16px;
   cursor: pointer;
-  flex: 1;
-  flex-direction: column;
-  min-width: 0;
   box-sizing: border-box;
 }
 
@@ -333,6 +350,7 @@
   background-color: #a0b2c7;
   white-space: nowrap;
 }
+
 
 .footer {
   display: flex;
