--- a/styles/style.css
+++ b/styles/style.css
@@ -181,6 +181,7 @@ body {
 /* Navbar */
 .navbar {
   width: 100%;
+  height: 70px;
   background-color: #ffffff;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05); /* Softer shadow */
   position: sticky;
@@ -206,16 +207,7 @@ body {
 
 .logo-text {
   color: dodgerblue;
-  padding-top: 20px;
 }
-
-.tagline {
-  font-size: 0.8rem;
-}
-
-
-
-
 
 /* Auth Buttons in Nav */
 .signin-btn,
