--- a/styles/style.css
+++ b/styles/style.css
@@ -195,7 +195,7 @@ body {
   justify-content: space-between;
   padding: 12px 24px;
   height: 100%;
-  position: relative;~
+  position: relative;
   max-width: 1200px;
   margin: 0 auto;
 }
@@ -207,7 +207,7 @@ body {
 
 .logo-group {
   position: absolute;
-  left: 20%;
+  left: 8%;
   display: flex; /* Better alignment */
   flex-direction: column;
 }
@@ -219,6 +219,8 @@ body {
   font-weight: 600;
   font-family: "helvetica" Arial, Helvetica, sans-serif;
 }
+
+
 
 /* Hamburger Menu */
 .hamburger {
